# MaxKCutPreprocessing

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  requirements.txt
cmake/modules/: FindGUROBI.cmake
include/: globals.hpp
include/preprocessing/: cliqueRules.hpp  connectedComponentRules.hpp  dominatingEdges.hpp  lowDegreeRules.hpp  maxKCutPreprocessor.hpp  maxKCutPreprocessorUtils.hpp  nearCliqueRules.hpp  similarVertices.hpp  spqr.hpp  tls_checker.hpp  twoLayerSplit.hpp  twoLayerSplitParallel.hpp
include/solver/: constraintGenerator.hpp  edgeBasedModel.hpp  greedy_max_k_cut.hpp  localSearchHeuristic.hpp  maxKCutSolver.hpp  max_k_cut_solver_gurobi.hpp  sparsePairingModel.hpp
include/solver/separationHeuristics/: cliqueFinder.hpp  cycleAssignmentFinder.hpp  cycleFinder.hpp  hypermetricFinder.hpp  shiftedColumnFinder.hpp  wheelFinder.hpp
include/util/: bipartiteMatching.hpp  indexedSet.hpp  indexedSetGraphUtil.hpp  io.hpp  oddShortestCycle.hpp  subgraphUtils.hpp  unionFind.hpp
scripts/: compile_debug  compile_release  eval.py  helper.py  installInstances.py  instanceDownloader.py  instance_stattistics.py  plot.py
scripts/plotting_scripts/: ablation_average_runtime.py  ablation_solved_instances.py  extra_constraints.py  kernelSize.py  number_solved_instances.py  number_solved_instances_by_fap.py  plot_ablation_impact.py  plot_solved_instances.py  runtime_per_instance.py  runtime_per_k.py  solution_bounds_by_instance.py  tables_ablation.py  tables_benchmark.py  tables_etc.py  tables_heuristic.py  tables_instances.py  tables_stats.py
slurm/: ablation_fap_instances  ablation_large_instances  ablation_small_instances  ablation_torus_instances  basic_fap_instances  basic_large_instances  basic_physics_instances  basic_small_instances  basic_torus_instances  configs.sh  heuristic  listInstances  run_one_benchmark  stats
src/: globals.cpp
src/mains/: ablation.cpp  benchmark.cpp  cuttingPlanesBenchmark.cpp  heuristic.cpp  main.cpp  statChecker.cpp
src/preprocessing/: cliqueRules.cpp  connectedComponentRules.cpp  dominatingEdges.cpp  lowDegreeRules.cpp  maxKCutPreprocessingUtils.cpp  maxKCutPreprocessor.cpp  similarVertices.cpp  spqr.cpp  tls_checker.cpp  twoLayerSplit.cpp  twoLayerSplitParallel.cpp
src/solver/: constraintGenerator.cpp  edgeBasedModel.cpp  greedy_max_k_cut.cpp  localSearchHeuristic.cpp  maxKCutSolver.cpp  max_k_cut_solver_gurobi.cpp  sparsePairingModel.cpp
src/solver/separationHeuristics/: cliqueFinder.cpp  cycleAssignmentFinder.cpp  cycleFinder.cpp  hypermetricFinder.cpp  shiftedColumnFinder.cpp  wheelFinder.cpp
src/util/: bipartiteMatching.cpp  indexedSetGraphUtil.cpp
test/: CMakeLists.txt  basic.cpp  extraConstraints.cpp  greedy_max_k_cut_test.cpp  indexedSet.cpp  preprocessorTest.cpp  utils.cpp
