cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)

project(mkcp)

if (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
endif ()

set(CMAKE_CXX_FLAGS_DEBUG "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g -fopenmp")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fopenmp -DNDEBUG")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # Enable/Disable output of compile commands during generation

find_package(OpenMP COMPONENTS CXX REQUIRED)

### This Project #####
add_subdirectory(src)

# NO hpp files needed here!
# Sort alphabetical (leave main at position 0)
set(SOURCES
        src/globals.cpp

        src/util/bipartiteMatching.cpp
        src/util/indexedSetGraphUtil.cpp

        src/solver/max_k_cut_solver_gurobi.cpp
        src/solver/greedy_max_k_cut.cpp
        src/solver/constraintGenerator.cpp
        src/solver/maxKCutSolver.cpp
        src/solver/edgeBasedModel.cpp
        src/solver/sparsePairingModel.cpp

        src/solver/separationHeuristics/cliqueFinder.cpp
        src/solver/separationHeuristics/wheelFinder.cpp
        src/solver/separationHeuristics/shiftedColumnFinder.cpp
        src/solver/separationHeuristics/hypermetricFinder.cpp

        src/preprocessing/maxKCutPreprocessingUtils.cpp
        src/preprocessing/maxKCutPreprocessor.cpp
        src/preprocessing/lowDegreeRules.cpp
        src/preprocessing/dominatingEdges.cpp
        src/preprocessing/cliqueRules.cpp
        src/preprocessing/similarVertices.cpp
        src/preprocessing/connectedComponentRules.cpp
        src/preprocessing/twoLayerSplit.cpp
        src/preprocessing/spqr.cpp
        src/preprocessing/tls_checker.cpp
        src/solver/separationHeuristics/cycleFinder.cpp
        src/solver/separationHeuristics/cycleAssignmentFinder.cpp
        include/solver/separationHeuristics/cycleAssignmentFinder.hpp
        src/solver/localSearchHeuristic.cpp
        src/preprocessing/twoLayerSplitParallel.cpp


)


### Extern Projects #####
list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/modules")
find_package(GUROBI REQUIRED)
include_directories(SYSTEM ${GUROBI_INCLUDE_DIRS})

# NetworKIT
if (NOT NETWORKIT_DIR)
    add_subdirectory(extern/networkit)
else ()
    add_library(networkit SHARED IMPORTED)
    set_target_properties(networkit PROPERTIES
            IMPORTED_LOCATION ${NETWORKIT_DIR}/lib/libnetworkit.so
            INTERFACE_INCLUDE_DIRECTORIES ${NETWORKIT_DIR}/include
    )
endif ()

# OGDF
if (NOT OGDF_DIR)
    # System keyword supresses compiler warnings from OGDF
    add_subdirectory(extern/ogdf SYSTEM)
else ()
    find_package(OGDF CONFIG PATHS ${OGDF_DIR})
    if (NOT OGDF_FOUND)
        message(FATAL_ERROR "No OGDF configuration for CMake has been found. "
                "Please set OGDF_CONFIG_SEARCH_PATH such that ogdf-config.cmake (generated by your OGDF build) can be found.")
    endif ()
endif ()

# gtest
option(TESTS "Build the tests" ON)
if (TESTS)
    enable_testing()
    include(GoogleTest)
    add_subdirectory("${PROJECT_SOURCE_DIR}/extern/googletest")

    macro(package_add_test TESTNAME)
        # create an executable in which the tests will be stored
        add_executable(${TESTNAME} ${ARGN})
        # link the Google test infrastructure, mocking library, and a default main function to
        # the test executable.  Remove g_test_main if writing your own main function.
        target_include_directories(${TESTNAME} PRIVATE ${PROJECT_SOURCE_DIR}/include)
        target_link_libraries(${TESTNAME} gtest gmock gtest_main optimized ${GUROBI_CXX_LIBRARY}
                debug ${GUROBI_CXX_DEBUG_LIBRARY}
                ${GUROBI_LIBRARY}
                networkit
                OGDF
        )

        # gtest_discover_tests replaces gtest_add_tests,
        # see https://cmake.org/cmake/help/v3.10/module/GoogleTest.html for more options to pass to it
        gtest_discover_tests(${TESTNAME}
                # set a working directory so your project root so that you can find test data via paths relative to the project root
                WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
                PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_DIR}"
        )
        set_target_properties(${TESTNAME} PROPERTIES FOLDER tests)
    endmacro()

    # ADD TEST DIRECTORIES HERE
    add_subdirectory(${PROJECT_SOURCE_DIR}/test)
endif ()

## Gurobi binary
add_executable(main
        src/mains/main.cpp
        ${SOURCES})

target_include_directories(main
        PRIVATE
        ${PROJECT_SOURCE_DIR}/include
)

target_link_libraries(main
        optimized ${GUROBI_CXX_LIBRARY}
        debug ${GUROBI_CXX_DEBUG_LIBRARY}
        ${GUROBI_LIBRARY}
        networkit
        OGDF
        OpenMP::OpenMP_CXX
)

add_executable(benchmark
        src/mains/benchmark.cpp
        ${SOURCES}
)

target_include_directories(benchmark
        PRIVATE
        ${PROJECT_SOURCE_DIR}/include
)

target_link_libraries(benchmark
        optimized ${GUROBI_CXX_LIBRARY}
        debug ${GUROBI_CXX_DEBUG_LIBRARY}
        ${GUROBI_LIBRARY}
        networkit
        OGDF
        OpenMP::OpenMP_CXX
)

add_executable(cuttingPlanesBenchmark
        src/mains/cuttingPlanesBenchmark.cpp
        ${SOURCES}
)

target_include_directories(cuttingPlanesBenchmark
        PRIVATE
        ${PROJECT_SOURCE_DIR}/include
)

target_link_libraries(cuttingPlanesBenchmark
        optimized ${GUROBI_CXX_LIBRARY}
        debug ${GUROBI_CXX_DEBUG_LIBRARY}
        ${GUROBI_LIBRARY}
        networkit
        OGDF
        OpenMP::OpenMP_CXX
)


add_executable(statChecker
        src/mains/statChecker.cpp
        ${SOURCES}
)

target_include_directories(statChecker
        PRIVATE
        ${PROJECT_SOURCE_DIR}/include
)

target_link_libraries(statChecker
        optimized ${GUROBI_CXX_LIBRARY}
        debug ${GUROBI_CXX_DEBUG_LIBRARY}
        ${GUROBI_LIBRARY}
        networkit
        OGDF
        OpenMP::OpenMP_CXX
)

add_executable(ablationBenchmark
        src/mains/ablation.cpp
        ${SOURCES}
)

target_include_directories(ablationBenchmark
        PRIVATE
        ${PROJECT_SOURCE_DIR}/include
)

target_link_libraries(ablationBenchmark
        optimized ${GUROBI_CXX_LIBRARY}
        debug ${GUROBI_CXX_DEBUG_LIBRARY}
        ${GUROBI_LIBRARY}
        networkit
        OGDF
        OpenMP::OpenMP_CXX
)

add_executable(heuristicBenchmark
        src/mains/heuristic.cpp
        ${SOURCES}
)

target_include_directories(heuristicBenchmark
        PRIVATE
        ${PROJECT_SOURCE_DIR}/include
)

target_link_libraries(heuristicBenchmark
        optimized ${GUROBI_CXX_LIBRARY}
        debug ${GUROBI_CXX_DEBUG_LIBRARY}
        ${GUROBI_LIBRARY}
        networkit
        OGDF
        OpenMP::OpenMP_CXX
)